# c_lib_template

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  README.md
example/src/: main.c
include/: common.h
src/: main.c
